dataset1235/2025-2/2947369575/users/2975895382/executions/1003782500_1078076002.log
== RUN (2025-08-26 14:58:54)
-- CODE: 
#c)erro de sintaxe invalida
#g) erro de sintaxe, string literal em aberto, faltou fechar aspas
#k) erro de sintaxe, parenteses nao foi fechado
#o) erro de Nome. Variável X2 nao existe, mas ele recomenda x2 

x1 = 1.23
printt(x1)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    printt(x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    printt(x1)
    ^^^^^^
NameError: name 'printt' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:57:10)
-- CODE: 
#c)erro de sintaxe invalida
#d) x1 = 1.23
#g) erro de string literal em aberto, faltou fechar aspas
x1 = "Ufam"
print(x1


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    print(x1
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 5
    print(x1
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:56:24)
-- CODE: 
#c)erro de sintaxe invalida
#d) x1 = 1.23

x1 = "Ufam
print(x1)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 4
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 4
    x1 = "Ufam
         ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:55:48)
-- CODE: 
#c)

x 1 = 1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 3
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 3
    x 1 = 1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 14:59:34)
-- CODE: 
#c)erro de sintaxe invalida
#g) erro de sintaxe, string literal em aberto, faltou fechar aspas
#k) erro de sintaxe, parenteses nao foi fechado
#o) erro de Nome. Variável X2 nao existe, mas ele recomenda x2 
#s) Erro de nome. printt não é uma função definida nativamente. Aí ele sugere print

x1 = 1.23
print(x1)


-- EXECUTION TIME: 
0.02
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:58:09)
-- CODE: 
#c)erro de sintaxe invalida
#d) x1 = 1.23
#g) erro de sintaxe, string literal em aberto, faltou fechar aspas
#k) erro de sintaxe, parenteses nao foi fechado

x1 = 1.23
x2 = 0
print(X2)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(X2)
          ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(X2)
          ^^
NameError: name 'X2' is not defined. Did you mean: 'x2'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
